fixed overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,28 +7,26 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /* padding-top: 5rem; */
 } 
-
 .main-content {
   flex: 1;
 }
 
+/*Navbar Styling*/
 .navbar{
     min-height: 5rem;
     background-color: white;
     flex-wrap: wrap;
 }
-
 .fa-compass{
     color: #fe424d;
     font-size: 2rem;
 }
-
 .nav-link{
-    color: #222222 !important;
+    color: #222222  !important;    /* !important is used to override bootstrap default styling */
 }
 
+/*Footer Styling*/
 .site-footer{
   width:100%;
   background:#ebebeb;
@@ -38,61 +36,62 @@ body{
 
 .f-info {
   width: 100%;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 2rem;   /* spacing instead of fixed height */
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   text-align: center;
 }
 
+
+
 .f-info-socials,
 .f-info-brand,
 .f-info-links{
   width:100%;
 }
-
+/* styling for the Cards */
 .listing-card{
     border: none !important;
     margin-bottom: 2rem;
 }
-
 .card-img-top {
     border-radius: 1rem !important;
     width: 100% !important;
     object-fit: cover !important;
 }
-
 .card-body{
     padding: 1.25rem !important;
 }
-
 .card-text p {
     font-weight: 400 !important;
 }
-
 .listing-link {
     text-decoration: none;
 }
 
+/*Card Hover Effect*/
 .card-img-overlay{
     opacity: 0;
 }
-
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
 }
 
+/*New Listing Page Styling*/
 .add-btn{
     background-color: #fe424d !important;
     border: none !important;
 }
 
+/*Edit Listing Page Styling*/
 .edit-btn{
     background-color: #fe424d !important;
     border: none !important;
 }
 
+/*Show Listing Page Styling*/
 .show-img{
     height: 30vh;
 }
@@ -106,6 +105,8 @@ body{
     padding-right: 0;
 }
 
+
+/* Map Responsive Fix */
 #map {
   height: 350px;
   width: 100% !important;
@@ -114,24 +115,4 @@ body{
 }
 
 
-@media (max-width:768px){
 
-.navbar .container{
-  display:flex;
-  flex-direction:column;
-  align-items:stretch;
-}
-
-.navbar form{
-  width:100%;
-}
-
-.navbar input{
-  width:100%;
-  margin-bottom:0.5rem;
-}
-
-.navbar button{
-  width:100%;
-}
-}
